# msc-thesis

./: .gitignore  README.md  analyze.py  generate.py  linux_build_llvm.py  obfuscator_porting.txt  test.py  win_build_llvm.bat  win_build_llvm.py
doc/DIP/tex/: fitthesis.cls  literatura.bib  obsah.tex  projekt.aux  projekt.blg  projekt.out  projekt.ptc  projekt.tex  projekt.toc
doc/SEP/tex/: literatura.bib  obsah.tex  obsah_2.tex  projekt.aux  projekt.bbl  projekt.blg  projekt.out  projekt.tex  projekt.toc
llvm-3.7.0/: .gitignore  winbuild.bat
llvm-3.7.0/include/llvm/: CryptoUtils.h  LinkAllPasses.h
llvm-3.7.0/lib/Analysis/: CMakeLists.txt  Makefile
llvm-3.7.0/lib/Passes/: LLVMBuild.txt
llvm-3.7.0/lib/Transforms/: CMakeLists.txt
llvm-3.7.0/tools/bugpoint/: CMakeLists.txt
signatures/: keylogger_1-4a1a7e27.sdg  keylogger_2-b9d1348c.sdg  keylogger_3-fee7bd41.sdg  zwclose7-CTS-5a821d4a.sdg  zwclose7-ZeroX-1a2d02ac.sdg
tautomata-inf/: AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  LIMITATIONS  Makefile  Makefile.am  Makefile.in  Makefile.save  README  TODOS  config.status  configure  configure.in  libtool
tautomata-inf/autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
tautomata-inf/scripts/: detect  divide  drawcummulative  heatmap  matrix  procdetect  rerun  sdgrun  sdgstats  virustotal  virustotal.py  virustotal_report.py
tautomata-inf/src/: Acceptor.cpp  Acceptor.h  BuildAutomaton.cpp  BuildAutomaton.h  CClosure.cpp  CClosure.h  CSE.cpp  CSE.h  Checker.cpp  CompilerPortability.h  Counted.h  DependencyParser.cpp  DependencyParser.h  DotDump.cpp  DotDump.h  ENode.h  HashFunctions.cpp  HashFunctions.h  KRootHash.h  Makefile  Makefile.am  Makefile.in  Parser.cpp  Parser.h  Rand.cpp  Rand.h  SDGInference.cpp  Term.cpp  Term.h  TermVisitor.cpp  TermVisitor.h  Utilities.cpp  Utilities.h
tautomata-inf/src/.deps/: libtinf_la-Acceptor.Plo  libtinf_la-BuildAutomaton.Plo  libtinf_la-CClosure.Plo  libtinf_la-CSE.Plo  libtinf_la-DependencyParser.Plo  libtinf_la-DotDump.Plo  libtinf_la-HashFunctions.Plo  libtinf_la-Parser.Plo  libtinf_la-Rand.Plo  libtinf_la-Term.Plo  libtinf_la-TermVisitor.Plo  libtinf_la-Utilities.Plo  sdgchecker-Checker.Po  sdginfer-SDGInference.Po
test_sets/test_set1/: desc.txt  out.txt
test_sets/test_set1/test/: keylogger_1-00366a79.sdg  keylogger_1-031192b0.sdg  keylogger_1-0d42e73f.sdg  keylogger_1-1fe9cb94.sdg  keylogger_1-2efc6b90.sdg  keylogger_1-3381726e.sdg  keylogger_1-42f49370.sdg  keylogger_1-559434f6.sdg  keylogger_1-68d2ea97.sdg  keylogger_1-6c5efca9.sdg  keylogger_1-6ff6c666.sdg  keylogger_1-8ea86e2d.sdg  keylogger_1-99c42729.sdg  keylogger_1-d18b9dfd.sdg  keylogger_1-d6d67a7c.sdg  keylogger_1-e4fa672b.sdg  keylogger_1-fc6742a8.sdg  keylogger_1-fdd1930b.sdg  keylogger_2-15cad8d1.sdg  keylogger_2-2190eb21.sdg  keylogger_2-3f42dc33.sdg  keylogger_2-4f7d5c36.sdg  keylogger_2-5b80e50b.sdg  keylogger_2-9b459048.sdg  keylogger_2-c78893d8.sdg  keylogger_2-d7fd8d82.sdg  keylogger_2-ed15c78d.sdg  keylogger_2-f6a47435.sdg  keylogger_2-f9f3d273.sdg  zwclose7-Zerox-08daddc6.sdg  zwclose7-Zerox-1ccea8fb.sdg  zwclose7-Zerox-224a85c6.sdg  zwclose7-Zerox-4cfa6376.sdg  zwclose7-Zerox-4ea8569c.sdg  zwclose7-Zerox-5bd100c3.sdg  zwclose7-Zerox-87f420f9.sdg  zwclose7-Zerox-9507ee11.sdg  zwclose7-Zerox-9578b1d3.sdg  zwclose7-Zerox-98e09e95.sdg  zwclose7-Zerox-bb2e3895.sdg  (+3 more)
test_sets/test_set1/train/: keylogger_1-2860fb35.sdg  keylogger_1-33e214ce.sdg  keylogger_1-35cff289.sdg  keylogger_1-4975ad3c.sdg  keylogger_1-4d98d315.sdg  keylogger_1-78b7ff9a.sdg  keylogger_1-88af2c25.sdg  keylogger_1-982dc505.sdg  keylogger_1-af3b3c3d.sdg  keylogger_1-cf0b3c90.sdg  keylogger_1-e226e652.sdg  keylogger_2-069c26ea.sdg  keylogger_2-0b4bbae7.sdg  keylogger_2-168735ef.sdg  keylogger_2-1c69cbbe.sdg  keylogger_2-2daebd27.sdg  keylogger_2-541d752e.sdg  keylogger_2-57e96029.sdg  keylogger_2-592b3797.sdg  keylogger_2-5fb5a029.sdg  keylogger_2-60d6c0da.sdg  keylogger_2-62ac0126.sdg  keylogger_2-66648e70.sdg  keylogger_2-7af7a09b.sdg  keylogger_2-b19f2fde.sdg  keylogger_2-fa885db8.sdg  keylogger_2-ff1891c4.sdg  zwclose7-Zerox-049590dc.sdg  zwclose7-Zerox-18f25ad6.sdg  zwclose7-Zerox-31f31d9e.sdg  zwclose7-Zerox-3754dbf6.sdg  zwclose7-Zerox-3a1a4d04.sdg  zwclose7-Zerox-3a4ad99a.sdg  zwclose7-Zerox-3e26a3e7.sdg  zwclose7-Zerox-3e763b42.sdg  zwclose7-Zerox-3ef17edd.sdg  zwclose7-Zerox-439e8db2.sdg  zwclose7-Zerox-49542923.sdg  zwclose7-Zerox-656bec3f.sdg  zwclose7-Zerox-6aa420a7.sdg  (+10 more)
test_sets/test_set2/: desc.txt  out.txt
test_sets/test_set2/test/: keylogger_1-2540d38f.sdg  keylogger_1-2604a3e7.sdg  keylogger_1-3c9c643d.sdg  keylogger_1-41540bed.sdg  keylogger_1-4468a6a9.sdg  keylogger_1-4478aedc.sdg  keylogger_1-58d272e5.sdg  keylogger_1-5c01ea1e.sdg  keylogger_1-7e7388d7.sdg  keylogger_1-8926e26c.sdg  keylogger_1-a1803c9f.sdg  keylogger_1-afad88b9.sdg  keylogger_1-d5d3b128.sdg  keylogger_1-d80327be.sdg  keylogger_1-d90f9ecd.sdg  keylogger_1-ed65fb86.sdg  keylogger_1-f2ec7251.sdg  keylogger_1-f66539bd.sdg  keylogger_1-fa00cd65.sdg  keylogger_1-fb93a59c.sdg  keylogger_1-fe482ac2.sdg  keylogger_2-2fb031c0.sdg  keylogger_2-3fbb6dc4.sdg  keylogger_2-5a0960a3.sdg  keylogger_2-5b169843.sdg  keylogger_2-71f75d19.sdg  keylogger_2-7854d7ea.sdg  keylogger_2-a2103311.sdg  keylogger_2-b0c4d579.sdg  keylogger_2-cfa2d222.sdg  keylogger_2-ef75063c.sdg  keylogger_2-f4a14437.sdg  zwclose7-Zerox-1f862eb8.sdg  zwclose7-Zerox-4293dd80.sdg  zwclose7-Zerox-58ae47c4.sdg  zwclose7-Zerox-6d5cb533.sdg  zwclose7-Zerox-70098cbd.sdg  zwclose7-Zerox-73b93202.sdg  zwclose7-Zerox-84e5a79a.sdg  zwclose7-Zerox-87e3358d.sdg  (+9 more)
test_sets/test_set2/train/: keylogger_1-06f8174c.sdg  keylogger_1-0ea2a787.sdg  keylogger_1-1100c96f.sdg  keylogger_1-13d65ba6.sdg  keylogger_1-2449ef58.sdg  keylogger_1-33710013.sdg  keylogger_1-36c4c01e.sdg  (+42 more)
test_sets/test_set3/: desc.txt  out.txt
test_sets/test_set4/: desc.txt  out1.txt  out2.txt
test_sets/test_set5/: desc.txt  out1.txt  out2.txt
test_sets/test_set6/: desc.txt  out1.txt  out2.txt
(+346 files in other folders)
